# OpenOrchestra

./: .gitignore  README.md  docker_integration_architecture.md  generate_svgs.py  orchestra  planner_peer_review_implementation.md  pyproject.toml  requirements.txt  system_architecture_and_flow.html  system_architecture_and_flow.md
config/: config.yaml
docs/: architecture_review_todo.md  generated_architecture_metrics.md  generated_visibility_matrix.md  harness-v2-architecture.md  refactor_todo.md  role-runtime-docker-todo.md
harness/: __init__.py  main.py
tests/: orchestrator_mock_support.py  test_agent_output_policy.py  test_app_bootstrap.py  test_architecture_docs.py  test_architecture_metrics.py  test_artifact_input_budget.py  test_artifact_metadata.py  test_artifact_schemas.py  test_artifact_validator.py  test_artifact_visibility_policy.py  test_backend_health.py  test_checkpoint_resume.py  test_cli_commands.py  test_collaboration_layer.py  test_command_execution_architecture.py  test_command_runner.py  test_config_loader.py  test_decision_parser.py  test_delivery_contract_review.py  test_delivery_publisher.py  test_delivery_publisher_architecture.py  test_diagnostics_service.py  test_docker_test_runner.py  test_final_validation_gate.py  test_harness_v2_architecture.py  test_harness_v2_artifact_plane.py  test_harness_v2_events.py  test_harness_v2_replay.py  test_harness_v2_saga.py  test_harness_v2_workflow_saga.py  test_input_staging_fixing.py  test_input_staging_tester.py  test_interactive_cli.py  test_judge_runner.py  test_misc_chat.py  test_mock_adapter.py  (+28 more)
(+169 files in other folders)
