[project]
name = "open-orchestra"
version = "0.1.0"
description = "OpenOrchestra coordinates mature coding agents through bounded workflows."
requires-python = ">=3.11"
dependencies = ["prompt_toolkit>=3.0.52,<4.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = ["prompts/templates/*.md", "state/migrations.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
